prueba de ramas

--- a/index.html
+++ b/index.html
@@ -42,6 +42,8 @@
             </section>
         </header>
 
+        <!-- Esto es una prueba de ramas -->
+
         <main>
             <section class="presentacion">
                 <img src="./imagenes/conjunto-verde1.png" alt="conjunto verde" class="conjuntoVerde">
