agregadas nuevas animaciones. En proceso

--- a/index.html
+++ b/index.html
@@ -42,8 +42,6 @@
             </section>
         </header>
 
-        <!-- Esto es una prueba de ramas -->
-
         <main>
             <section class="presentacion">
                 <img src="./imagenes/conjunto-verde1.png" alt="conjunto verde" class="conjuntoVerde">
@@ -51,9 +49,9 @@
                 <img src="./imagenes/mono1.png" alt="mono" class="mono">
             </section>
 
-            <section class="oferta">
+            <section class="tarjeta">
                 <!-- Modifiqué un poco estas secciones para facilitar la vista responsive -->
-                <!-- <div class="oferta__texto"> -->
+                <div class="tarjeta__oferta">
                     <h2 class="oferta__titulo">Productos</h2>
                     <p class="oferta__texto">Nuestro catalogo de productos <!-- <br> --> es completamente de diseño propio. <!-- <br> -->Con talles reales, para personas reales.</p>
                     <button>
@@ -65,29 +63,33 @@
                 </div>
             </section>
 
-            <section class="oferta">
-                <div class="oferta__img">
-                    <img src="./imagenes/asesoria2.png" alt="" class="queonda">
+            <section class="tarjeta">
+                <div class="tarjeta__oferta">
+                    <div class="oferta__img">
+                        <img src="./imagenes/asesoria2.png" alt="" class="queonda">
+                    </div>
+                    <!-- <div class="oferta__texto"> -->
+                        <h2 class="oferta__titulo">Asesoramiento</h2>
+                        <p class="oferta__texto">Brindamos servicio de <!-- <br> -->asesoramiento de imagen. <!-- <br> -->Nuestros clientes, nuestas musas.</p>
+                        <button>
+                            <a href="./paginas/asesoramiento.html">Ver más</a>
+                        </button>
+                    </div>
                 </div>
-                <!-- <div class="oferta__texto"> -->
-                    <h2 class="oferta__titulo">Asesoramiento</h2>
-                    <p class="oferta__texto">Brindamos servicio de <!-- <br> -->asesoramiento de imagen. <!-- <br> -->Nuestros clientes, nuestas musas.</p>
-                    <button>
-                        <a href="./paginas/asesoramiento.html">Ver más</a>
-                    </button>
                 <!-- </div> -->
             </section>
 
-            <section class="oferta">
-                <!-- <div class="oferta__texto"> -->
-                <h2 class="oferta__titulo">La casita Barroca</h2>
-                <p class="oferta__texto">Diseñadores, asesores de imagen,fotografos,<!-- <br> -->decoradores. Todos formamos parte de <!-- <br> -->La Casita Barroca</p>
-                <button>
-                    <a href="./paginas/la-casita-barroca.html">Ver más</a>
-                </button>
-                <!-- </div> -->
-                <div class="oferta__img">
-                    <img src="./imagenes/somos-barroca2.png" alt="">
+            <section class="tarjeta">
+                <div class="tarjeta__oferta">
+                    <h2 class="oferta__titulo">La casita Barroca</h2>
+                    <p class="oferta__texto">Diseñadores, asesores de imagen,fotografos,<!-- <br> -->decoradores. Todos formamos parte de <!-- <br> -->La Casita Barroca</p>
+                    <button>
+                        <a href="./paginas/la-casita-barroca.html">Ver más</a>
+                    </button>
+                    <!-- </div> -->
+                    <div class="oferta__img">
+                        <img src="./imagenes/somos-barroca2.png" alt="">
+                    </div>
                 </div>
             </section>
         </main>
