restaurada vista responsive en tarjetas index

--- a/index.html
+++ b/index.html
@@ -37,7 +37,25 @@
                         </li>
                     </ul>
                     <!-- Menú hamburguesa que aparece cuando se achica la ventana -->
-                    <span class="navegacion__hambur">≡</span>
+                    <span class="navegacion__hambur">≡
+                        <ul class="hambur__links">
+                            <li>
+                                <a href="./index.html">Home</a>
+                            </li>
+                            <li>
+                                <a href="./paginas/productos.html">Productos</a>
+                            </li>
+                            <li>
+                                <a href="./paginas/asesoramiento.html">Asesoramiento</a>
+                            </li>
+                            <li>
+                                <a href="./paginas/la-casita-barroca.html">La casita Barroca</a>
+                            </li>
+                            <li>
+                                <a href="./paginas/contacto.html">Contacto</a>
+                            </li>
+                        </ul>
+                    </span>
                 </nav>
             </section>
         </header>
@@ -61,6 +79,7 @@
                 <div class="oferta__img">
                     <img src="./imagenes/pantalon1.jpeg" alt="pantalon1">
                 </div>
+                </div>
             </section>
 
             <section class="tarjeta">
@@ -75,7 +94,7 @@
                             <a href="./paginas/asesoramiento.html">Ver más</a>
                         </button>
                     </div>
-                </div>
+                <!-- </div> -->
                 <!-- </div> -->
             </section>
 
