Agregando nuevas animaciones. Finalizado

--- a/paginas/productos.html
+++ b/paginas/productos.html
@@ -35,13 +35,25 @@
                         <a href="./contacto.html">Contacto</a>
                     </li>
                 </ul>
-                <span class="navegacion__hambur">≡</span>
-                <!-- <div class="navegacion__redes">
-                    <a href="https://www.instagram.com/somosbarroca/">
-                        <img src="./imagenes/insta.png" alt="instagram"/>   
-                    </a>
-                    <img src="./imagenes/wsp.png" alt="whatsapp"/>
-                </div> --> 
+                <span class="navegacion__hambur">≡
+                    <ul class="hambur__links">
+                        <li>
+                            <a href="../index.html">Home</a>
+                        </li>
+                        <li>
+                            <a href="./productos.html">Productos</a>
+                        </li>
+                        <li>
+                            <a href="./asesoramiento.html">Asesoramiento</a>
+                        </li>
+                        <li>
+                            <a href="./la-casita-barroca.html">La casita Barroca</a>
+                        </li>
+                        <li>
+                            <a href="./contacto.html">Contacto</a>
+                        </li>
+                    </ul>
+                </span> 
             </nav>
         </section>
     </header>
@@ -78,7 +90,35 @@
                     </li>
                 </ul>
                 <!-- Menú hamburguesa que aparece cuando se achica la ventana -->
-                <span class="select__hambur">≡</span>
+                <span class="select__hambur">≡
+                    <ul class="hambur__opciones">
+                        <li>
+                            <!-- <input type="radio" id="producto" name="select"> -->
+                            <input type="checkbox" id="todo">
+                            <label for="todo">Todo</label>
+                        </li>
+                        <li>
+                            <!-- <input type="radio" id="producto" name="select"> -->
+                            <input type="checkbox" id="camisas">
+                            <label for="camisas">Camisas</label>
+                        </li>
+                        <li>
+                            <!-- <input type="radio" id="producto" name="select"> -->
+                            <input type="checkbox" id="conjuntos">
+                            <label for="conjuntos">Conjuntos</label>
+                        </li>
+                        <li>
+                            <!-- <input type="radio" id="producto" name="select"> -->
+                            <input type="checkbox" id="jeans">
+                            <label for="jeans">Jeans</label>
+                        </li>
+                        <li>
+                            <!-- <input type="radio" id="producto" name="select"> -->
+                            <input type="checkbox" id="remeras">
+                            <label for="remeras">Remeras</label>
+                        </li>
+                    </ul>
+                </span>
             </section>
     
             <section class="productos__catalogo">
