--- a/paginas/contacto.html
+++ b/paginas/contacto.html
@@ -36,7 +36,25 @@
                     </li>
                 </ul>
                 <!-- Menú hamburguesa que aparece cuando se achica la ventana -->
-                <span class="navegacion__hambur">≡</span> 
+                <span class="navegacion__hambur">≡
+                    <ul class="hambur__links">
+                        <li>
+                            <a href="../index.html">Home</a>
+                        </li>
+                        <li>
+                            <a href="./productos.html">Productos</a>
+                        </li>
+                        <li>
+                            <a href="./asesoramiento.html">Asesoramiento</a>
+                        </li>
+                        <li>
+                            <a href="./la-casita-barroca.html">La casita Barroca</a>
+                        </li>
+                        <li>
+                            <a href="./contacto.html">Contacto</a>
+                        </li>
+                    </ul>
+                </span> 
             </nav>
         </section>
     </header>
